# study-air-hockey

./: .gitignore  .gitpod.yml  CMakeLists.txt  LICENSE  README.md
app/conf/: table.tsv
app/scripts/: study-air-hoceky-app-1.xml  study-air-hoceky-app-2.xml  study-air-hoceky-app.xml  study-air-hoceky-system.xml  study-air-hockey-system.xml
gazebo/: CMakeLists.txt
gazebo/worlds/: study-air-hockey.sdf
modeling/: interpolation_model.slx
plotting/: octave-script.m  plot.sh
src/: main.cpp  study-1.cpp  study-2.cpp
